# otus_cpp

./: .gitignore  CMakeLists.txt  LICENSE.txt
cmake/: function.cmake  version.cmake
labs/: CMakeLists.txt
labs/lab1/: CMakeLists.txt  README.md
labs/lab1/lib/: CMakeLists.txt  lib.cpp  lib.h
labs/lab1/src/: CMakeLists.txt  main.cpp
labs/lab1/test/: CMakeLists.txt
